--- a/database_engineering.ipynb
+++ b/database_engineering.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -18,46 +18,95 @@
     "# Import Dependencies\n",
     "from sqlalchemy import create_engine, Column, Integer, String, Float\n",
     "from sqlalchemy.ext.declarative import declarative_base\n",
+    "from sqlalchemy.orm import Session\n",
+    "import pandas as pd\n",
     "\n",
-    "\n",
-    "Base = declarative_base()"
+    "# Set up engines\n",
+    "Base = declarative_base()\n",
+    "engine = create_engine('sqlite:///hawaii.sqlite')\n",
+    "session = Session(bind=engine)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Import files\n",
+    "file_name1 = ('Resources\\cleaned_hawaii_measurements.csv')\n",
+    "measurements_df = pd.read_csv(file_name1)\n",
+    "file_name2 = ('Resources\\cleaned_hawaii_stations.csv')\n",
+    "stations_df = pd.read_csv(file_name2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create classes to pass\n",
+    "class station(Base):\n",
+    "    __tablename__ = \"stations\"\n",
+    "    station = Column(String(255), primary_key = True)\n",
+    "    name = Column(String(255))\n",
+    "    latitude = Column(Float)\n",
+    "    longitude = Column(Float)\n",
+    "    elevation = Column(Float)\n",
+    "    \n",
+    "class measurement(Base):\n",
+    "    __tablename__ = \"measurements\"\n",
+    "    id = Column(Integer, primary_key = True)\n",
+    "    station = Column(String(255))\n",
+    "    date = Column(String(255))\n",
+    "    prcp = Column(Float)\n",
+    "    tobs = Column(Integer)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Adding Metaata\n",
+    "Base.metadata.create_all(engine)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pushing measurements to database\n",
+    "measurements_df.to_sql('measurement', engine, if_exists='replace', index=id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pushing stations to database\n",
+    "stations_df.to_sql('stations', engine, if_exists='replace', index=id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Commiting\n",
+    "session.commit()"
+   ]
   },
   {
    "cell_type": "code",
