--- a/data_engineering.ipynb
+++ b/data_engineering.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "4  USC00519397  2010-01-06   NaN    73"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,32 +171,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "station    18103\n",
-       "date       18103\n",
-       "prcp       18103\n",
-       "tobs       18103\n",
+       "station    19550\n",
+       "date       19550\n",
+       "prcp       19550\n",
+       "tobs       19550\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "measurements_df.dropna(how='any', inplace = True)\n",
+    "measurements_df.fillna(value=0, inplace = True)\n",
     "measurements_df.count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -256,11 +256,11 @@
        "      <td>76</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>4</th>\n",
        "      <td>USC00519397</td>\n",
-       "      <td>2010-01-07</td>\n",
-       "      <td>0.06</td>\n",
-       "      <td>70</td>\n",
+       "      <td>2010-01-06</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>73</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -272,10 +272,10 @@
        "1  USC00519397  2010-01-02  0.00    63\n",
        "2  USC00519397  2010-01-03  0.00    74\n",
        "3  USC00519397  2010-01-04  0.00    76\n",
-       "5  USC00519397  2010-01-07  0.06    70"
+       "4  USC00519397  2010-01-06  0.00    73"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,11 +286,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "measurements_df.to_csv(os.path.join(\"Resources\", \"cleaned_hawaii_measurements.csv\"),encoding='utf-8', index=False)"
+    "measurements_df.index.rename(\"id\", inplace=True)\n",
+    "measurements_df.to_csv(os.path.join(\"Resources\", \"cleaned_hawaii_measurements.csv\"),encoding='utf-8', index=True)"
    ]
   },
   {
@@ -302,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -434,19 +437,19 @@
        "8      152.4  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "stations_df = pd.read_csv(file_name2)\n",
-    "stations_df.head(9)"
+    "stations_df.head(20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +463,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +488,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,33 +499,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "station      9\n",
-       "name         9\n",
-       "latitude     9\n",
-       "longitude    9\n",
-       "elevation    9\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "stations_df.dropna(how='any', inplace = True)\n",
-    "stations_df.count()"
+    "#stations_df.dropna(how='any', inplace = True)\n",
+    "#stations_df.count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +643,7 @@
        "8      152.4  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,13 +654,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 59,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "measurements_df.to_csv(os.path.join(\"Resources\", \"cleaned_hawaii_stations.csv\"),encoding='utf-8', index=False)"
+    "stations_df.to_csv(os.path.join(\"Resources\", \"cleaned_hawaii_stations.csv\"),encoding='utf-8', index=False)"
    ]
   },
   {
